--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,6 @@ itypes==1.2.0
 jinja2==3.1.4
 Markdown==3.6
 MarkupSafe==2.1.5
-msedge-selenium-tools==3.141.4
 numpy==1.26.4
 packaging==24.0
 pandas==2.2.2
@@ -30,13 +29,17 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
 requests==2.31.0
-selenium==3.141.0
+selenium==4.9.0
 six==1.16.0
 soupsieve==2.5
 sqlparse==0.5.0
 typing-extensions==4.11.0
 tzdata==2024.1
 uritemplate==4.1.1
-urllib3==2.2.1
+urllib3
 zipp==3.18.1
 gunicorn
+webdriver_manager
+chromedriver-autoinstaller
+selenium-stealth
+undetected-chromedriver
